--- a/src/main/resources/templates/index.fxml
+++ b/src/main/resources/templates/index.fxml
@@ -10,7 +10,7 @@
          <font>
             <Font name="Consolas" size="25.0" />
          </font></Label>
-      <TableView fx:id="tTarea" layoutX="76.0" layoutY="71.0" prefHeight="200.0" prefWidth="466.0">
+      <TableView fx:id="tTarea" layoutX="184.0" layoutY="72.0" prefHeight="200.0" prefWidth="402.0">
         <columns>
           <TableColumn fx:id="tTareaId" prefWidth="43.33331298828125" text="Id" />
           <TableColumn fx:id="tTareaNombre" prefWidth="142.0" text="Nombre" />
@@ -18,5 +18,23 @@
             <TableColumn fx:id="tTareaEstatus" minWidth="2.33331298828125" prefWidth="92.0" text="Estatus" />
         </columns>
       </TableView>
+      <AnchorPane layoutX="14.0" layoutY="72.0" prefHeight="200.0" prefWidth="162.0">
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" text="Tarea" />
+            <Label layoutX="15.0" layoutY="70.0" text="Responsable" />
+            <Label layoutX="15.0" layoutY="125.0" text="Estatus" />
+            <TextField fx:id="tfTarea" layoutX="7.0" layoutY="31.0" />
+            <TextField fx:id="tfResponsable" layoutX="7.0" layoutY="88.0" />
+            <TextField fx:id="tfEstatus" layoutX="7.0" layoutY="142.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="41.0" layoutY="296.0" prefHeight="90.0" prefWidth="546.0">
+         <children>
+            <Button fx:id="bAgregar" layoutX="31.0" layoutY="33.0" mnemonicParsing="false" text="Agregar" />
+            <Button fx:id="bModificar" layoutX="167.0" layoutY="33.0" mnemonicParsing="false" text="Modificar" />
+            <Button fx:id="bEliminar" layoutX="316.0" layoutY="33.0" mnemonicParsing="false" text="Eliminar" />
+            <Button fx:id="bLimpiar" layoutX="446.0" layoutY="32.0" mnemonicParsing="false" text="Limpiar" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
